--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.0",
     "private": true,
     "dependencies": {
+        "simplex-noise": "^2.4.0",
         "three": "^0.115.0"
     }
 }
